--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "thoughtsforparis",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Thoughts for paris Nov 13",
   "main": "./bin/thoughts-for-paris.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["Paris", "killings", "terrorism"],
+  "keywords": [
+    "Paris",
+    "killings",
+    "terrorism"
+  ],
   "author": "soyuka",
   "license": "WTF",
   "dependencies": {
