--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/soyuka/thoughts-for-paris",
   "keywords": [
     "Paris",
     "killings",
