--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "terrorism"
   ],
   "author": "soyuka",
-  "license": "WTF",
+  "license": "MIT",
   "dependencies": {
     "ansi-rainbow": "1.0.0",
     "chalk": "^1.1.1",
